
- PDO_Sqlite extension:
  . Add createCollation support. (Damien)

- SOAP:
  . Fixed basic HTTP authentication for WSDL sub requests. (Dmitry)

- Reflection:
  . Fixed bug #60968 (Late static binding doesn't work with 
    ReflectionMethod::invokeArgs()). (Laruence)

- Array:
  . Fixed bug #61058 (array_fill leaks if start index is PHP_INT_MAX).
    (Laruence)

02 Feb 2012, PHP 5.3.10

- Core:
  . Fixed arbitrary remote code execution vulnerability reported by Stefan 
    Esser, CVE-2012-0830. (Stas, Dmitry)

10 Jan 2012, PHP 5.3.9

- Core:
  . Added max_input_vars directive to prevent attacks based on hash collisions
    (Dmitry).
  . Fixed bug #60205 (possible integer overflow in content_length). (Laruence)
  . Fixed bug #60139 (Anonymous functions create cycles not detected by the
    GC). (Dmitry)
  . Fixed bug #60138 (GC crash with referenced array in RecursiveArrayIterator)
    (Dmitry).
  . Fixed bug #60120 (proc_open's streams may hang with stdin/out/err when 
    the data exceeds or is equal to 2048 bytes). (Pierre, Pascal Borreli)
  . Fixed bug #60099 (__halt_compiler() works in braced namespaces). (Felipe)
  . Fixed bug #60019 (Function time_nanosleep() is undefined on OS X). (Ilia)
  . Fixed bug #55874 (GCC does not provide __sync_fetch_and_add on some archs).
    (klightspeed at netspace dot net dot au)
  . Fixed bug #55798 (serialize followed by unserialize with numeric object
    prop. gives integer prop). (Gustavo)
  . Fixed bug #55749 (TOCTOU issue in getenv() on Windows builds). (Pierre)
  . Fixed bug #55707 (undefined reference to `__sync_fetch_and_add_4' on Linux
    parisc). (Felipe)
  . Fixed bug #55674 (fgetcsv & str_getcsv skip empty fields in some
    tab-separated records). (Laruence)
  . Fixed bug #55649 (Undefined function Bug()). (Laruence)
  . Fixed bug #55622 (memory corruption in parse_ini_string). (Pierre)
  . Fixed bug #55576 (Cannot conditionally move uploaded file without race
    condition). (Gustavo)